Add admin authentication and user management features